# autobot

./: .gitignore  README.md  pyproject.toml
examples/: autobot.toml
examples/systemd/: autobot.service
prompts/defaults/: ai_review.md  child_pr_followup_review.md  github_check_failure.md  github_pr_review_comment.md
src/autobot/: __init__.py  cli.py  config.py  context.py  event_envelope.py  logging.py  loop_prevention.py  repo_registry.py  secrets.py  server.py  stats.py  templates.py  web.py
src/autobot/ai/: base.py  budgets.py  command.py  openai_compatible.py  session_discovery.py
src/autobot/db/: sqlite.py
src/autobot/handlers/: __init__.py  ai_prompt.py  registry.py  shell.py
src/autobot/providers/: base.py  github.py  github_meta.py
src/autobot/quality/: __init__.py  ai_review.py  coderabbit.py  tests.py
src/autobot/queue/: __init__.py  recovery.py  redis_queue.py
src/autobot/web_static/: index.html
src/autobot/web_static/assets/: index-CIn7R38y.js  index-CKnv-qWX.css
src/autobot/workflows/: base.py  child_pr_cleanup.py  engine.py  github_check_failure.py  github_review_comment.py
tests/: test_cli.py  test_context.py  test_core.py  test_github_ip_ranges.py  test_recovery_loop.py  test_session_discovery.py  test_web.py  test_workflows.py
web/: index.html  package-lock.json  package.json  vite.config.ts
web/src/: main.tsx  style.css
